home/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home
  name: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
      name: home
    spec:
      containers:
      - image: erfangc/home:latest
        imagePullPolicy: IfNotPresent
        name: home
      restartPolicy: Always
